# harveyz-skill

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  bundles.json  package-lock.json  package.json  skill-map.html  skills-index.json  workflow-config.yml
.claude/: branch-cleanup.md  settings.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: .workflow-config.lock.yml  commit-msg  post-checkout  pre-commit  pre-push
.hskill/: release-profile.md
docs/: INDEX.md
lib/: bundles.js  installer.js  targets.js  (+1 more)
tools/hub/: hub.sh  pyproject.toml  tool.json
tools/hub/docs/: cli-reference.md
tools/hub/docs/design-previews/: git-textual-tui-design.html  tasks-textual-tui-design.html
tools/hub/docs/superpowers/plans/: 2026-06-18-todo-md-sync.md
tools/hub/docs/superpowers/specs/: 2026-06-18-todo-md-sync-design.md
tools/hub/hub/: __main__.py
tools/hub/hub/cli/: __init__.py  git.py  projects.py  tasks.py
tools/hub/hub/core/: db.py  migrate.py  projects.py  tasks.py  todo_sync.py
tools/hub/hub/tui/: app.py  git.py
tools/hub/hub/tui/panels/: git.py  projects.py  tasks.py
tools/hub/tests/: test_cli.py  test_db.py  test_migrate.py  test_projects.py  test_scan.py  test_tasks.py  test_todo_sync.py  test_tui_app.py  test_tui_git.py  test_tui_git_panel.py  test_tui_projects_panel.py  test_tui_tasks_panel.py
tools/sync-agent/: pyproject.toml  sync.sh  sync_agent.sh  tool.json
tools/sync-agent/sync_agent/: __main__.py  cli.py  config.py  launchd.py  syncthing.py
tools/sync-agent/tests/: test_cli.py  test_config.py  test_syncthing.py
tools/todo-tool/: pyproject.toml  todo-tool.sh
tools/todo-tool/frontend/: package.json  vite.config.ts
tools/todo-tool/frontend/src/: App.tsx  index.css
tools/todo-tool/frontend/src/components/: AddTaskDialog.tsx  FilterBar.tsx  TaskList.tsx  TaskRow.tsx
tools/todo-tool/tests/: test_api.py  test_cli.py  test_db.py  test_models.py  test_projects_index.py  test_sync.py
tools/todo-tool/todo/: cli.py  db.py  models.py  parser.py  projects_index.py  server.py
(+708 files in other folders)
