[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hub"
version = "1.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.80",
]

[project.scripts]
hub = "hub.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["hub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
