[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-agent"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "requests>=2.31",
]

[project.scripts]
sync-agent = "sync_agent.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["sync_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
