[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "todo-tool"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
todo = "todo.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["todo"]
artifacts = ["todo/todo_format.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
